19760 stack overflow dina mapper circular relation (#71)
*  Add test for circular reference
* Add first iteration of the implementation
* Added matching test case for apply do to entity
* Mapper now fully maps circular relations with no stack overflows.
* tests now prove the circular relation is still mapped
* use identity hash map to support equals and hash codes