@@ -7,6 +7,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -81,7 +82,7 @@ public class DinaMapper<D, E> {
   @SneakyThrows
   public D toDto(E entity, Map<Class<?>, Set<String>> selectedFieldPerClass, Set<String> relations) {
     D dto = dtoClass.getConstructor().newInstance();
-    mapSourceToTarget(entity, dto, selectedFieldPerClass, relations);
+    mapSourceToTarget(entity, dto, selectedFieldPerClass, relations, new IdentityHashMap<>());
     return dto;
   }
 
@@ -114,7 +115,7 @@ public class DinaMapper<D, E> {
     Map<Class<?>, Set<String>> selectedFieldPerClass,
     Set<String> relations
   ) {
-    mapSourceToTarget(dto, entity, selectedFieldPerClass, relations);
+    mapSourceToTarget(dto, entity, selectedFieldPerClass, relations , new IdentityHashMap<>());
   }
 
   /**
@@ -133,20 +134,24 @@ public class DinaMapper<D, E> {
    *                                - selected fields to map
    * @param relations
    *                                - relations to map
+   * @param visited
+   *                                - map of visted objects and there corresponding target.
    */
   private <T,S> void mapSourceToTarget(
     @NonNull S source,
     @NonNull T target,
     @NonNull Map<Class<?>, Set<String>> selectedFieldPerClass,
-    @NonNull Set<String> relations
+    @NonNull Set<String> relations,
+    @NonNull Map<Object, Object> visited
   ) {
+    visited.putIfAbsent(source, target);
     Class<?> sourceType = source.getClass();
     Set<String> selectedFields = selectedFieldPerClass.getOrDefault(sourceType, new HashSet<>());
     Predicate<String> ignoreIf = field -> handlers.containsKey(sourceType)
         && handlers.get(sourceType).hasCustomFieldResolver(field);
 
     mapFieldsToTarget(source, target, selectedFields, ignoreIf);
-    mapRelationsToTarget(source, target, selectedFieldPerClass, relations);
+    mapRelationsToTarget(source, target, selectedFieldPerClass, relations, visited);
     if (handlers.containsKey(sourceType)) {
       handlers.get(sourceType).resolveFields(selectedFields, source, target);
     }
@@ -157,25 +162,37 @@ public class DinaMapper<D, E> {
    * designated from the given field name and only the given fields per relation
    * source class are mapped.
    *
-   * @param <T>                   - Type of target
-   * @param <S>                   - Type of source
-   * @param source                - source of the mapping
-   * @param target                - target of the mapping
-   * @param fieldsPerClass - selected fields of the relations source class
-   * @param fieldName             - field name of the relation
+   * @param <T>
+   *                         - Type of target
+   * @param <S>
+   *                         - Type of source
+   * @param source
+   *                         - source of the mapping
+   * @param target
+   *                         - target of the mapping
+   * @param fieldsPerClass
+   *                         - selected fields of the relations source class
+   * @param fieldName
+   *                         - field name of the relation
+   * @param visited
+   *                         - map of visted objects and there corresponding target.
    */
   @SneakyThrows
   private <T, S> void mapRelationsToTarget(
     S source,
     T target,
     Map<Class<?>, Set<String>> fieldsPerClass,
-    Set<String> relations
+    Set<String> relations,
+    Map<Object, Object> visited
   ) {
     for (String relationFieldName : relations) {
       if (!hasfield(source.getClass(), relationFieldName)
           || !hasfield(target.getClass(), relationFieldName)) {
         continue;
       }
+
+      // Each relation requires a sepearte tracking set
+      Map<Object, Object> currentVisited = new IdentityHashMap<>(visited);
 
       Class<?> sourceRelationType = PropertyUtils.getPropertyType(source, relationFieldName);
       Class<?> targetType = getResolvedType(target, relationFieldName);
@@ -186,10 +203,10 @@ public class DinaMapper<D, E> {
       if (sourceRelation != null) {
         if (isCollection(sourceRelationType)) {
           targetRelation = ((Collection<?>) sourceRelation).stream()
-            .map(ele -> mapRelation(fieldsPerClass, ele, targetType))
+            .map(ele -> mapRelation(fieldsPerClass, ele, targetType, currentVisited))
             .collect(Collectors.toCollection(ArrayList::new));
         } else {
-          targetRelation = mapRelation(fieldsPerClass, sourceRelation, targetType);
+          targetRelation = mapRelation(fieldsPerClass, sourceRelation, targetType, currentVisited);
         }
       }
 
@@ -207,19 +224,30 @@ public class DinaMapper<D, E> {
    *                     - source of the mapping
    * @param targetType
    *                     - target type of new target
+   * @param visited
+   *                     - map of visted objects and there corresponding target.
    * @return the mapped target
    */
   @SneakyThrows
-  private Object mapRelation(Map<Class<?>, Set<String>> fields, Object source, Class<?> targetType) {
+  private Object mapRelation(
+    Map<Class<?>, Set<String>> fields,
+    Object source,
+    Class<?> targetType,
+    Map<Object, Object> visited
+  ) {
     if (source == null) {
       return null;
     }
 
-    Object target = targetType.newInstance();
+    if (visited.keySet().contains(source)) {
+      return visited.get(source);
+    }
+
+    Object target = targetType.getDeclaredConstructor().newInstance();
     Set<String> relation = Stream
       .concat(getRelations(source.getClass()).stream(), getRelations(targetType).stream())
       .map(Field::getName).collect(Collectors.toSet());
-    mapSourceToTarget(source, target, fields, relation);
+    mapSourceToTarget(source, target, fields, relation, visited);
     return target;
   }
 
